[project]
name = "truffle-ai-image-editor-mcp"
version = "1.0.1"
description = "MCP server for core image editing operations using OpenCV and Pillow"
authors = [
    {name = "Truffle AI", email = "founders@trytruffle.ai"}
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0", 
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "setuptools>=65.0.0",
]

[project.scripts]
truffle-ai-image-editor-mcp = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["."] 