[project]
name = "truffle-ai-music-creator-mcp"
version = "1.0.3"
description = "MCP server for core music creation and audio processing operations"
authors = [
    {name = "Truffle AI", email = "founders@trytruffle.ai"}
]
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "pydub>=0.25.1",
    "music21>=8.1.0",
    "pretty_midi>=0.2.9",
    "numpy>=1.24.0",
    "mcp>=1.0.0",
    "setuptools>=65.0.0",
]

[project.scripts]
truffle-ai-music-creator-mcp = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["."] 
